# FLTK-basic-app

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.txt
data/: generalDB  generalDB.db  generalDB.db-journal  generalDB.sqbpro
docs/: Doxyfile.in
include/: databaseService.h  definitions.h  login_window.h  person_class.h  products_window.h  stock_window.h  users_window.h
src/assets/: README.txt
src/dbService/: CMakeLists.txt  databaseService.cpp
src/main/: CMakeLists.txt  main.cpp
src/windows/: CMakeLists.txt  login_window.cpp  person_class.cpp  products_window.cpp  stock_window.cpp  users_window.cpp
test/: CMakeLists.txt  mock_runner.cpp  test_dbService.cpp  test_runner.cpp
